--- a/theme/index.html
+++ b/theme/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="col-md-12 text-center" style="margin-top: 20px;">
           <div class="block">
-            <img src="images/素材5.png" style="height: 174px; width: 500px;" alt="Img">
+            <img src="images/素材5.png" class="responsive-image" alt="Img">
           </div>
         </div>
       </div>
