--- a/theme/temple1.html
+++ b/theme/temple1.html
@@ -122,7 +122,7 @@
                     </div>
                     <div class="col-md-12 left-0" style="margin-top: 20px;">
                         <div class="block">
-                            <img src="images/素材4.png" style="height: 179px; width: 500px;" alt="Img">
+                            <img src="images/素材4.png" class="responsive-image" alt="Img">
                         </div>
                     </div>
                 </div>
@@ -583,7 +583,7 @@
                 </div>
                 <div class="col-md-12 text-center" style="margin-top: 20px;">
                     <div class="block">
-                        <img src="images/素材1.png" style="height: 112px; width: 500px;" alt="Img">
+                        <img src="images/素材1.png" class="responsive-image" alt="Img">
                     </div>
                 </div>
             </div>
@@ -748,7 +748,7 @@
                 </div>
                 <div class="col-md-12 text-center" style="margin-top: 20px;">
                     <div class="block">
-                        <img src="images/素材6.png" style="height: 236px; width: 500px;" alt="Img">
+                        <img src="images/素材6.png"class="responsive-image" alt="Img">
                     </div>
                 </div>
             </div>
