--- a/theme/index.html
+++ b/theme/index.html
@@ -74,7 +74,7 @@
                   <a class="nav-link" href="index.html" style="font-size: large;"><strong>介紹</strong></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="blog-grid.html" style="font-size: large;"><strong>論壇</strong></a>
+                  <a class="nav-link" href="blog-grid.html" style="font-size: large;"><strong>禁忌小知識</strong></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="blog-video.html" style="font-size: large;"><strong>影音專區</strong></a>
@@ -118,7 +118,19 @@
             她抱持著熱忱與好奇心在未來世界做考古研究。</p>
           <p style="color: #353240;">
             然而，在過程中，發現了一艘被火燒過的大船，金光閃爍後，她意外穿梭到了2023年的地球，為了找出其中的奧秘並且完成考古研究，因此她帶領著在探險過程中遇到的小夥伴們開始調查關於這艘船的故事，冒險也就此展開...。</p>
-          <a href="#story1" class="btn btn-main animated fadeInUp">故事開始</a>
+          <a class="btn btn-main animated fadeInUp" href="#story1">故事開始</a>
+
+          <!-- <div id="overlay">
+            <div id="modal">
+              <h3 style="color: #353240;">請輸入您的暱稱：</h3>
+              <form id="nicknameForm">
+                <input type="text" id="nickname" name="nickname" required>
+                <br>
+                <input class="btn btn-main animated fadeInUp" type="submit" id="showScore" value="送出">
+                <button id="close" class="btn btn-main animated fadeInUp">取消</button>
+              </form>
+            </div>
+          </div> -->
         </div>
         <div class="col-md-12 text-center" style="margin-top: 20px;">
           <div class="block">
@@ -147,9 +159,10 @@
         <div class="col-md-6">
           <div class="block">
             <div class="ani">
-              <img src="images/comic_01.png" alt="Img" style="border-radius: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);">
+              <img src="images/comic_01.png" alt="Img"
+                style="border-radius: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);">
             </div>
-    
+
           </div>
         </div><!-- .col-md-5 close -->
       </div>
@@ -164,7 +177,8 @@
         <div class="col-md-6">
           <div class="block">
             <div class="ani">
-              <img src="images/comic_02.png" alt="Img" style="border-radius: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);">
+              <img src="images/comic_02.png" alt="Img"
+                style="border-radius: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);">
             </div>
           </div>
         </div><!-- .col-md-5 close -->
@@ -183,7 +197,7 @@
   </section>
   <hr class="rectangle-1-left">
   <hr class="rectangle-2-left">
- 
+
 
   <section class="about section section-hover" id="story3">
     <div class="container">
@@ -202,7 +216,8 @@
         <div class="col-md-6">
           <div class="block">
             <div class="ani">
-              <img src="images/comic_03.png" alt="Img" style="border-radius: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);">
+              <img src="images/comic_03.png" alt="Img"
+                style="border-radius: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);">
             </div>
           </div>
         </div><!-- .col-md-5 close -->
@@ -210,7 +225,7 @@
     </div>
   </section>
   <hr class="rectangle-1-right">
- 
+
 
   <section class="about section section-hover" id="story4">
     <div class="container">
@@ -218,7 +233,8 @@
         <div class="col-md-6">
           <div class="block">
             <div class="ani">
-              <img src="images/comic_04.png" alt="Img" style="border-radius: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);">
+              <img src="images/comic_04.png" alt="Img"
+                style="border-radius: 15px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);">
             </div>
           </div>
         </div><!-- .col-md-5 close -->
@@ -251,6 +267,20 @@
               對於這艘外型獨特、不同於一般航行在海上的船，似乎承載著貫穿數個世代的歷史意義與文化價值，
               以及在「王船醮」舉辦時許多豐富的健行儀式與活動，都需要我們慢慢地逐一深入探索。</p>
             <a class="btn btn-main btn-solid-border" href="#imagines">開始調查</a>
+
+            <!-- <div id="overlayQuestion">
+              <div id="qs">
+                <p id="questionText" style="color: #000;"></p>
+                <form id="Q1Form" class="question">
+                  <button type="button" onclick="checkAnswer('A')">A</button>
+                  <button type="button" onclick="checkAnswer('B')">B</button>
+                  <button type="button" onclick="checkAnswer('C')">C</button>
+                  <button type="button" onclick="checkAnswer('D')">D</button>
+                </form>
+              </div>
+            </div>
+            <div id="scoreDisplay"></div> -->
+
           </div>
         </div>
       </div>
@@ -447,7 +477,7 @@
                     </div>
                   </div>
                 </div>
-                
+
               </div>
             </div>
 
