--- a/theme/contact.html
+++ b/theme/contact.html
@@ -74,7 +74,7 @@
                   <a class="nav-link" href="index.html" style="font-size: large;"><strong>介紹</strong></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="blog-grid.html" style="font-size: large;"><strong>論壇</strong></a>
+                  <a class="nav-link" href="blog-grid.html" style="font-size: large;"><strong>禁忌小知識</strong></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="blog-video.html" style="font-size: large;"><strong>影音專區</strong></a>
